# flapping-coin-contract-solana-

./: Anchor.toml  package.json
programs/flap/: Cargo.toml
programs/flap/src/: constants.rs  error.rs  lib.rs
programs/flap/src/instructions/: buy_ticket.rs  claime_prize.rs  create_game.rs  create_raffle.rs  deposit.rs  initialize.rs  join_game.rs  mod.rs  reveal_winner.rs  settle_flip.rs  withdraw.rs
programs/flap/src/state/: app_stats.rs  game.rs  mod.rs  player.rs  raffle.rs
tests/: flap.ts
